--- a/html/news.html
+++ b/html/news.html
@@ -146,15 +146,7 @@
 
 
     <div class="container-fluid newsServices">
-        <div id="app">
-            <h1>Hello App!</h1>
-            <p>
-                <router-link to="/foo">Go to Foo</router-link>
-                <router-link to="/bar">Go to Bar</router-link>
-            </p>
-            <router-view></router-view>
 
-        </div>
 
 
         <!-- 服務項目 -->
@@ -290,6 +282,55 @@
             </div>
         </div>
         <!-- 合作廠商產品列表 -->
+        <div id="app">
+            <div class="container-fluid mt-5 border ">
+                <div class="row justify-content-center">
+                    <div class="col-lg-2 bg-light m-2 routerImg">
+                        <router-link to="/foo">
+                            <div>
+                                <img src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖" />
+                            </div>
+                        </router-link>
+                    </div>
+                    <div class="col-lg-2 bg-light m-2 routerImg">
+                        <router-link to="/foo">
+                            <div>
+                                <img src="../資訊圖庫/合作夥伴logo/microsoft.png" alt="補圖" />
+                            </div>
+                        </router-link>
+                    </div>
+                    <div class="col-lg-2 bg-light m-2 routerImg">
+                        <router-link to="/foo">
+                            <div>
+                                <img src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="補圖" />
+                            </div>
+                        </router-link>
+                    </div>
+                    <div class="col-lg-2 bg-light m-2 routerImg">
+                        <router-link to="/foo">
+                            <div>
+                                <img src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="補圖" />
+                            </div>
+                        </router-link>
+                    </div>
+                    <div class="col-lg-2 bg-light m-2 routerImg">
+                        <router-link to="/foo">
+                            <div>
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="補圖" />
+                            </div>
+                        </router-link>
+                    </div>
+
+                </div>
+
+            </div>
+            <p>
+                <router-link to="/foo">Go to Foo</router-link>
+                <router-link to="/bar">Go to Bar</router-link>
+            </p>
+            <router-view></router-view>
+
+        </div>
 
         <div class="row my-5">
             <div class="col-lg-6 p-2">
@@ -315,7 +356,7 @@
                         <div class="row Cooperate">
                             <div class="col-lg-6 rec300">
                                 <div class="center">
-                                    <img class="w-75 h-auto" src="../資訊圖庫/合作夥伴logo/microsoft.png" alt="補圖" />
+                                    <img class="w-75 h-auto" src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="補圖" />
                                 </div>
 
                             </div>
