--- a/html/news.html
+++ b/html/news.html
@@ -371,7 +371,7 @@
             <div class="row my-5">
                 <div class="col-lg-6 p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.lenovo.com/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -388,7 +388,7 @@
                 </div>
                 <div class="col-lg-6 p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.microsoft.com/zh-tw">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -408,7 +408,7 @@
 
                 <div class="col-lg-6 p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.asus.com/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -429,7 +429,7 @@
                 </div>
                 <div class="col-lg-6 p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.dell.com/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -448,7 +448,7 @@
 
                 <div class="col-lg-6 p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.checkpoint.com/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6  rec300">
                                     <div class="center">
@@ -468,7 +468,7 @@
                 </div>
                 <div class="col-lg-6  p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.hpe.com/tw/zh/home.html">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -490,7 +490,7 @@
 
                 <div class="col-lg-6  p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.cisco.com/c/zh_tw/index.html">
                             <div class="row Cooperate">
                                 <div class="col-lg-6  rec300">
                                     <div class="center">
@@ -508,7 +508,7 @@
                 </div>
                 <div class="col-lg-6 p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.arubanetworks.com/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -544,7 +544,7 @@
                 </div> -->
                 <div class="col-lg-6  p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://www.fortinet.com/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
@@ -563,7 +563,7 @@
 
                 <div class="col-lg-6  p-2">
                     <div class="bg-light">
-                        <a href="#">
+                        <a href="https://dvc.org/">
                             <div class="row Cooperate">
                                 <div class="col-lg-6 rec300">
                                     <div class="center">
