--- a/html/contact.html
+++ b/html/contact.html
@@ -30,6 +30,10 @@
 </head>
 
 <body>
+    <div class = "Line">
+        <a href="https://lin.ee/1pMNaeP"><img src="../資訊圖庫/合作夥伴logo/icons8-line-480.png" height="80" border="0"></a>
+    </div>
+
 
     <input type="checkbox" id="active">
     <label for="active" class="menu-btn">
