--- a/html/index.html
+++ b/html/index.html
@@ -78,10 +78,9 @@
         <div class="introContent">
             <div data-aos="fade-up">
                 <h2 class="h2intro01">Take KAIMO,<br>Take the Future.</h2>
-                <h2 class="h2intro02">楷模資訊</h2>
+                <h2 class="h2intro02">楷模系統</h2>
             </div>
         </div>
-
 
         <!-- 服務項目 -->
         <div class="container-fluid indexService">
@@ -91,7 +90,7 @@
                         <div class="ServiceContent">
                             <h1 class="indexh1">WHAT WE<br>DO.
                                 <h2 class="indexh2">服務項目</h2>
-                                <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
+                                <p class="indexp">楷模資訊為
                                 </p>
                                 <button class="roundbutton" onclick="window.location.href='./news.html'">查看更多</button>
                         </div>
