--- a/html/index.html
+++ b/html/index.html
@@ -227,7 +227,10 @@
                     <div data-aos="fade-right" class="m-5 p-4" style="width: 500px;">
                         <h1 class="indexh1">ABOUT<br>US.
                             <h2 class="indexh2">關於我們</h2>
-                            <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
+                            <p class="indexp">
+                                永遠站在客戶角度設想，帶給品牌形象更高的價值。以品牌定位規劃最佳方案，提供最高質感設計為使命，與您並肩拓展品牌視野。
+                                <br><br>    
+                                Make Everything, More Valuable, With Great Ideas.
                             </p>
                             <button class="roundbutton" onclick="window.location.href='./aboutus.html'">認識楷模</button>
                     </div>
