--- a/backup/news.html
+++ b/backup/news.html
@@ -88,7 +88,7 @@
                         <p class="indexp">
                             微軟近期發表的Microsoft Defender for individuals個人安全工具，將成為Microsoft 365 Personal（個人版）與
                             Family（家用版）的內建功能。
-                            <br />Microsoft
+                            Microsoft
                             Defender提供持續的防毒與防網釣保護，用戶自單一的儀表板就能管理及檢視不同裝置的安全性，也能辨識及檢視系統上諸如Norton或McAfee等既有的安全保護，並把對Windows的支援延伸到macOS、Android與iPhone等裝置上，用戶還可接收即時的安全通知、解決策略或是專家提示。
                         </p>
                     </div>
