--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -56,9 +56,9 @@
                 <div class="col-lg-6 my-5 aboutContent">
                     <h1 class="indexh1">ABOUT <br />US.</h1>
                     <h3 class="indexh2">關於楷模</h3>
-                    <p class="indexp txtIn">楷模資訊 成立於2009年，迄今已成為多家知名軟、硬體大廠之大型客戶承銷商。目前除了臺中總部，服務耕耘客群也遍及全國北中南。</p>
+                    <p class="indexp txtIn">KAIMO-是一個台灣少數深具品牌思維的數位設計團隊，專注於設計與解決客戶需求，我們認為B2B的官網除了必須提供客戶快速且明確的操作體驗以外，也必需擁有B2C行銷機制。</p>
                     <p class="indexp txtIn">
-                        楷模團隊以即時且反應迅速服務機制，協助客戶於最快時間獲得問題解答與排除，以及在需求時間內到場技術支援服務，另外針對客戶不同需求來提供相對應解決方案的顧問服務及專案建置。</p>
+                        我們在設計中大量使用直覺式的UI及功能設計，將客戶需求及行銷資訊置入設計中，搭配具科技創新、人文時尚的專業影像，行銷與品牌形象兼具，讓B2B商業網站不再那麼刻板無趣。</p>
                 </div>
 
                 <div class="col-lg-6 KAIMAUDiv">
@@ -453,54 +453,54 @@
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <img src="../img/logo/color-whitebg.png">
-                    <h2 class='indexh2'>2009年</h2>
-                    <p class="indexptimeline">楷模資訊股份有限公司成立。</p>
+                    <img src="../img/aboutUs/ming.jpg">
+                    <h2 class='indexh2'>1994年</h2>
+                    <p class="indexptimeline">蔡茗名</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtL">
-                    <img src="../img/aboutUs/laptop.jpg">
-                    <h2 class='indexh2'>2010年</h2>
-                    <p class="indexptimeline">成為華碩卓越黃金經銷夥伴。</p>
+                    <img src="../img/aboutUs/swen.jpg">
+                    <h2 class='indexh2'>1996年</h2>
+                    <p class="indexptimeline">莊文翔</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <img src="../img/aboutUs/laptop.jpg">
-                    <h2 class='indexh2'>2013年</h2>
-                    <p class="indexptimeline">成為Microsoft Gold Partner Network微軟金級合作伙伴。</p>
+                    <img src="../img/aboutUs/lynn.jpg">
+                    <h2 class='indexh2'>1996年</h2>
+                    <p class="indexptimeline">蕭志宇</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtL">
-                    <img src="../img/aboutUs/laptop.jpg">
-                    <h2 class='indexh2'>2014年</h2>
-                    <p class="indexptimeline">成為Intel Technology Provider Gold Partner。</p>
+                    <img src="../img/aboutUs/sansan.jpg">
+                    <h2 class='indexh2'>1996年</h2>
+                    <p class="indexptimeline">張子珊</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <img src="../img/aboutUs/skyscraper.jpg">
-                    <h2 class='indexh2'>2019年</h2>
-                    <p class="indexptimeline">購置台中辦公室(現址)。</p>
+                    <img src="../img/aboutUs/ponchen.jpg">
+                    <h2 class='indexh2'>1998年</h2>
+                    <p class="indexptimeline">陳鵬丞</p>
                 </div>
             </div>
 
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtL">
-                    <img src="../img/aboutUs/growth.png">
-                    <h2 class='indexh2'>2021年</h2>
-                    <p class="indexptimeline">營業額連續三年成長20%。 </p>
+                    <img src="../img/aboutUs/group.jpg">
+                    <h2 class='indexh2'>2022年</h2>
+                    <p class="indexptimeline">KAIMO </p>
                 </div>
             </div>
 
