--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -56,9 +56,11 @@
                 <div class="col-lg-6 my-5 aboutContent">
                     <h1 class="indexh1">ABOUT <br />US.</h1>
                     <h3 class="indexh2">關於楷模</h3>
-                    <p class="indexp txtIn">KAIMO-是一個台灣少數深具品牌思維的數位設計團隊，專注於設計與解決客戶需求，我們認為B2B的官網除了必須提供客戶快速且明確的操作體驗以外，也必需擁有B2C行銷機制。</p>
+                    
                     <p class="indexp txtIn">
-                        我們在設計中大量使用直覺式的UI及功能設計，將客戶需求及行銷資訊置入設計中，搭配具科技創新、人文時尚的專業影像，行銷與品牌形象兼具，讓B2B商業網站不再那麼刻板無趣。</p>
+                        KAIMO-是一個台灣少數深具品牌思維的數位設計團隊，專注於設計與解決客戶需求，我們認為B2B的官網必須提供客戶快速且明確的操作體驗。</p>
+                    <p class="indexp txtIn">
+                        因此我們在畫面中大量使用直覺式的UI及功能設計，將客戶需求及行銷資訊置入設計中，搭配上兼具時尚感與科技感的專業影像，型塑一個清爽俐落的品牌形象，讓B2B商業網站充滿使用樂趣，進而加深使用者心中的印象。</p>
                 </div>
 
                 <div class="col-lg-6 KAIMAUDiv">
