--- a/html/contact.html
+++ b/html/contact.html
@@ -78,7 +78,7 @@
         <div class="row mt-5">
             <div id="contactForm" class="col-xl rounded border p-3 shadow m-3 ">
                 <p class="indexh3"> 諮詢與服務表單：</p>
-                <form method="post" action="http://localhost/front-end/Project/php/form.php" onsubmit="SubmitForm()">
+                <form method="post" action="http://localhost:3000/Project/php/form.php" onsubmit="SubmitForm()">
                     <!-- 使用VScode PHP server -->
                     <div class="form-group">
                         <label for="FormName" class="pl-2 titleFont">姓名 <span>*</span><span id="NameIfo"></span></label>
@@ -111,7 +111,7 @@
 
                     </div>
                     <div class="form-group">
-                        <img class="border" id="check" src="http://localhost/front-end/Project/php/captcha.php">
+                        <img class="border" id="check" src="http://localhost:3000/Project/php/captcha.php">
                         <!-- 使用VScode PHP server -->
                         <div id="refresh" class="ml-2">
                             <img id="refreshIcon" src="../資訊圖庫/icon/refresh-1.png" width="20px" height="20px">
